--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.shiva.practice">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".application.CakesApplication"
         android:allowBackup="true"
@@ -13,7 +15,7 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".modules.home.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
